--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,11 +31,13 @@
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@types/styled-components": "^5.1.12",
+    "@types/styled-components-react-native": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^9.7.0",
+    "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
