--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.6.3",
     "prettier": "^3.3.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
