--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-shadow-2": "^7.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
     "styled-components": "^6.1.12"
