--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
+    "react-native-swiper": "next",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
