--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-shadow-2": "^7.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
+    "react-native-tab-view": "^3.5.2",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
