--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -9,6 +10,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyDy5djqnjFFIzSfAS2nTwBxq6JRARxaUks"/>
+          <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
