--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-detector": "^0.2.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
