chore : podfile 수정

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,5 +39,24 @@ target 'ScreenWiper' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+      end
+    end
   end
+end
+
+# share Extension
+target 'ScreenWiperShare' do
+  share_extension_config = use_native_modules!
+
+  use_react_native!(
+    :path => share_extension_config[:reactNativePath],
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
+  )
+
+  pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
+  # Manually link packages here to keep your extension bundle size minimal
 end
