--- a/ios/ScreenWiper/Info.plist
+++ b/ios/ScreenWiper/Info.plist
@@ -71,5 +71,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>screenwiper</string>
+				<!-- This url scheme doesn't contain :// at the end - E.G. "mycustomscheme"-->
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
