--- a/ios/ScreenWiperShare/Info.plist
+++ b/ios/ScreenWiperShare/Info.plist
@@ -2,12 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>HostAppBundleIdentifier</key>
+	<string>org.reactjs.native.example.ScreenWiper</string>
+	<key>HostAppURLScheme</key>
+	<string>screenwiper://</string>
+	<!-- This url scheme CONTAINS :// at the end - E.G. "mycustomscheme://"-->
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<string>TRUEPREDICATE</string>
+			<dict>
+				<key>NSExtensionActivationSupportsImageWithMaxCount</key>
+				<integer>1</integer>
+				<key>NSExtensionActivationSupportsText</key>
+				<true/>
+				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+				<integer>1</integer>
+			</dict>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
