--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.6.3",
     "prettier": "^3.3.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
